--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Home</span></a>
+						<a href="index.html" class="logo"><strong>Auxilio me desmayo callese viejo lesbiano</strong> <span>Home</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
