--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Oscar Castillo Home</title>
+		<title>Sergio Pino Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Auxilio me desmayo callese viejo lesbiano</strong> <span>Home</span></a>
+						<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Home</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -49,14 +49,14 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hola, mi nombre es Oscar Castillo</h1>
+								<h1>Hola, mi nombre es Sergio Pino</h1>
 							</header>
 							<div class="content">
-								<p>Ing. Mecatrónico y Emprendedor en Educación y tecnología. <br />
-									Consultor de empresas en gestión de proyectos, gestión comercial,<br /> 
-									marketing digital, gestión organizacional y en educación virtual.</p>
+								<p>Estudiante de Arquitectura de Interiores cursando el 7mo ciclo, con un excelente  <br />
+									manejo de herramientas de diseño especialmente en AutoCAD, Sketchup y Vray,<br /> 
+									Responsable, dedicada y con un amor por el diseño lo cual me impulsa a mejorar cada dia .</p>
 								<ul class="actions">
-									<li><a href="https://www.linkedin.com/in/oscarcastillon/" class="button next scrolly">Mi Linkedin</a></li>
+									<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/" class="button next scrolly">Mi Linkedin</a></li>
 								</ul>
 							</div>
 						</div>
@@ -183,7 +183,7 @@
 										<h3>Phone</h3>
 										<span>(000) 000-0000 x12387</span>
 									</div>
-								</section>
+								</section>5
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
