--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="sobremi.html" class="link">Sobre mi</a></h3>
+										<h3><a href="sobremi.html" class="link">About me</a></h3>
 										<p>Formación y experiencia profesional</p>
 									</header>
 								</article>
