--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hola, mi nombre es Sergio Pino</h1>
+								<h1>Hola!, Soy Sergio Pino</h1>
 							</header>
 							<div class="content">
 								<p>Estudiante de Arquitectura de Interiores cursando el 7mo ciclo, con un excelente  <br />
