--- a/portafolio.html
+++ b/portafolio.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Oscar Castillo Portafolio</title>
+		<title>Sergio Pino Portafolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Portafolio de proyectos</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Portafolio de proyectos</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -51,8 +51,8 @@
 								<h1>Mi portafolio de proyectos</h1>
 							</header>
 							<div class="content">
-								<p>Aquí te voy a presentar los proyectos que enseño en<br />
-								La plataforma de educación virtual de proyectos tecnológicos.</p>
+								<p>A continuacion podras apreciar alguno de los proyectos que<br />
+								he realizado de manera individual sobre diseño de interiores .</p>
 							</div>
 						</div>
 					</section>
@@ -64,9 +64,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Especialidades de aprendizaje</h2>
+										<h2>Diseños de Arquitectura de interiores</h2>
 									</header>
-									<p>Aquí nos podremos adentrar a especialidades como la domótica low cost con dispositivos sonoff y su aplicación de sensores de humedad y temperatura. También aprender a desarrollar una landing page con wordpress para luego integrarlo con una plataforma de automatización de ventas. Finalmente aprenderás la especialidad de gestión de proyectos Online con Trello.</p>
+									<p>Todos los diseños que se veran a continuacion han sido pensados, desarrollados y renderizados por mi. Veremos dormitorios, terrazas, tiendas comerciales como unos de los muchos proyectos que he desarrollado.</p>
 								</div>
 							</section>
 
@@ -74,16 +74,17 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="images/sensorsonoff.png" alt="" data-position="center center" />
+										<img src="images/abogada 1.png" alt="" data-position="center center" />
+										<img src="images/abogada 2.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>SMART SWITCH SONOFF CON SENSOR DE TEMPERATURA Y HUMEDAD</h3>
+												<h3>DORMITORIO DE ABOGADA</h3>
 											</header>
-											<p>En este proyecto aprenderemos a realizar la instalación de un sistema inteligente de la marca Sonoff que nos facilita el monitoreo de temperatura y humedad de diversos puntos y aplicaciones, gracias a la facilidad de su conexión con sus diferentes sensores.</p>
+											<p>Este proyecto esta dirigido para una abogada de 28 años que vive en el distrito de Surco, el usuario nos comenta que su dormitorio unicamente seria para descansar para dividir el trabajo del descanso. Por ende se opto por este diseño moderno, iluminacion calida, y colores neutros para lograr este diseño acogedor moderno para una abogada de su categoria</p>
 											<ul class="actions">
-												<li><a href="https://mecinhome.com/proyectos/smart-switch-sonoff-sensor-temperatura-humedad/" class="button">Ver más</a></li>
+												<li><a href="https://www.canva.com/design/DAGCz0a_fj4/eYBM43sktvvt3Zm1K5igQw/edit" class="button">PORTAFOLIO DIGITAL</a></li>
 											</ul>
 										</div>
 									</div>
