--- a/portafolio.html
+++ b/portafolio.html
@@ -82,7 +82,7 @@
 											<header class="major">
 												<h3>DORMITORIO DE ABOGADA</h3>
 											</header>
-											<p>Este proyecto esta dirigido para una abogada de 28 años que vive en el distrito de Surco, el usuario nos comenta que su dormitorio unicamente seria para descansar para dividir el trabajo del descanso. Por ende se opto por este diseño moderno, iluminacion calida, y colores neutros para lograr este diseño acogedor moderno para una abogada de su categoria</p>
+											<p>Este proyecto esta dirigido para una abogada de 28 años que vive en el distrito de Surco, el usuario nos comenta que su dormitorio unicamente seria para descansar para dividir el trabajo del descanso. Por ende se opto por este diseño moderno, iluminacion calida, y colores neutros para lograr este diseño acogedor moderno para una abogada de su categoria.</p>
 											<ul class="actions">
 												<li><a href="https://www.canva.com/design/DAGCz0a_fj4/eYBM43sktvvt3Zm1K5igQw/edit" class="button">PORTAFOLIO DIGITAL</a></li>
 											</ul>
@@ -91,48 +91,51 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/wordpress.png" alt="" data-position="top center" />
+										<img src="images/Terraza 1.png" alt="" data-position="top center" />
+										<img src="images/Terraza 2.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>LANDING PAGE CON WORDPRESS</h3>
+												<h3>TERRAZA TYLER</h3>
 											</header>
-											<p>En este proyecto aprenderemos las posibilidades que te permite el CMS de WordPress para la creación ágil de Landing Page con sus Themes y Plugins. Vamos a ver cómo una herramienta No Code facilita su desarrollo.</p>
+											<p>La terraza fue diseñada para un cantante de la banda Twenty one Pilots Tyler Joseph, Este mismo cuenta con esposa he hijos y tiene un mejor amigo que de igual manera esta casado entonces se quiso diseñar una terraza con todas las facilidades y atendiendo todas las necesidades para cuando este el con su familia o con amigos .</p>
 											<ul class="actions">
-												<li><a href="https://mecinhome.com/proyectos/landing-page-con-wordpress/" class="button">Ver más</a></li>
+												<li><a href="https://www.canva.com/design/DAGCz0a_fj4/eYBM43sktvvt3Zm1K5igQw/edit" class="button">PORTAFOLIO DIGITAL</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/gumroad.png" alt="" data-position="center center" />
+										<img src="images/under 1.png" alt="" data-position="center center" />
+										<img src="images/under 2.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>VENTAS DIGITALES CON GUMROAD</h3>
+												<h3>EXPERIENCE STORE UNDER ARMOUR</h3>
 											</header>
-											<p>En este proyecto aprenderemos a realizar ventas digitales. Vamos a aprender a automatizar nuestras propuestas de servicios digitales y venderlos directamente sin necesidad de participación manual.</p>
+											<p>La marca UNDER ARMOUR se encontraba en busca de un diseño para su nueva tienda en el Jockey Plaza, esta tienda tenia que captar toda la elegancia, calidad y obviamente contar con los espacios de experiencia para que los nuevos usuarios tengan una experiencia unica y se animen a comprar los productos de calidad de Under armour. </p>
 											<ul class="actions">
-												<li><a href="https://mecinhome.com/proyectos/ventas-digitales-gumroad/" class="button">Ver más</a></li>
+												<li><a href="https://www.canva.com/design/DAGCz0a_fj4/eYBM43sktvvt3Zm1K5igQw/edit" class="button">PORTAFOLIO DIGITAL</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/Trello.png" alt="" data-position="top center" />
+										<img src="images/wisqa 1.png" alt="" data-position="top center" />
+										<img src="images/wisqa 2.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>GESTIÓN ÁGIL ONLINE CON SCRUM EN TRELLO</h3>
+												<h3>WISQA NATURAL STORE</h3>
 											</header>
-											<p>En este proyecto usaremos los principios de la metodología SCRUM para gestionar un proyecto tecnológico y lo usaremos de manera online con TRELLO.</p>
+											<p>WISQA es una marca que quiso dar el salto a los super mercados, ya que solo tienen un local en Miraflores, asi que tomando en cuenta el estilo que manejan, sus prendas se quiso capturar su esencia y transportarla a un espacio mucho mas comercial. De esa forma logramos una tienda natural calida y elegante. </p>
 											<ul class="actions">
-												<li><a href="https://mecinhome.com/proyectos/gestion-agil-online-con-scrum-en-trello/" class="button">Ver más</a></li>
+												<li><a href="https://www.canva.com/design/DAGCz0a_fj4/eYBM43sktvvt3Zm1K5igQw/edit" class="button">PORTAFOLIO DIGITAL</a></li>
 											</ul>
 										</div>
 									</div>
