--- a/bitacora.html
+++ b/bitacora.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Oscar Castillo Bitacora Digital</title>
+		<title>Sergio Pino Bitacora Digital</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Bitácora Digital</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Bitácora Digital</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -29,7 +29,7 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="https://www.linkedin.com/in/oscarcastillon/">Linkedin</a></li>
+						<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
 						<li><a href="sobremi.html">Experiencia Profesional</a></li>
 						<li><a href="bitacora.html">Bitacora Digital</a></li>
 						<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
@@ -44,10 +44,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Esta es mi bitácora digital</h1>
+								<h1>Mi bitacora!</h1>
 							</header>
 							<div class="content">
-								<p>Aquí te presento todo lo enseñado en clases. </p>
+								<p>Vamos a dar un pequeño viaje de todo lo aprendido durante este ciclo! </p>
 							</div>
 						</div>
 					</section>
