LINKED IN Y DRIVE

--- a/Semana 01.html
+++ b/Semana 01.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Bitácora Digital - Semana 01</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Bitácora Digital - Semana 01</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -29,14 +29,14 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="https://www.linkedin.com/in/oscarcastillon/">Linkedin</a></li>
+						<li><a href="https://www.linkedin.com/in/sergio-alvaro-pino-cornejo-8347a8143/">Linkedin</a></li>
 						<li><a href="sobremi.html">Experiencia Profesional</a></li>
 						<li><a href="bitacora.html">Bitacora Digital</a></li>
 						<li><a href="portafolio.html">Portafolio de Proyectos</a></li>
 						<li><a href="contenteducativo.html">Contenido Educativo</a></li>
 						<li><a href="articulos.html">Artículos</a></li>
 						<li><a href="publicaciones.html">Publicaciones</a></li>
-						<li><a href="https://drive.google.com/file/d/1p87cvogVSn7_vUFWK0AfNX4uEmA0pYys/view?usp=sharing">Proyecto Personal</a></li>
+						<li><a href="https://drive.google.com/file/d/1pD9bxJx1IS2u3gzXIKj7o7Xhn93G9nKN/view">Proyecto Personal</a></li>
 					</ul>
 				</nav>
 
@@ -64,9 +64,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Introducción</h2>
+										<h2>Conociendo el curso</h2>
 									</header>
-									<p>Aquí logramos conocernos más como salon, desde la presentación del docente hasta cada uno de los alumnos. Luego de manera virtual logramos iniciar a aprender nuestro espacio de trabajo y cómo subir nuestra web en Netlify.</p>
+									<p>Empezamos conociendo un poco sobre lo que vamos a aprender durante el curso, tambien conocer un poco mas al profesor quien es, a que se dedica, sus hobbies y de igual manera a nuestros compañeros</p>
 								</div>
 							</section>
 
