--- a/sobremi.html
+++ b/sobremi.html
@@ -50,12 +50,8 @@
 										<h1>Sobre mi</h1>
 									</header>
 									<span class="image main"><img src="images/Sobremiportada.jpeg" alt="" /></span>
-									<p>Hace 08 años me titule en ingeniería mecatrónica y desde ahí dedique 05 años de mi vida a especializarme en negocios, startups, gestión organizacional y marketing digital, donde tuve la posibilidad de ayudar a muchos emprendedores y empresas con sus negocios.</p>
-									<p>Ahora, me he trazado el reto de aprender desarrollo web durante los siguientes 05 años, sumándolo a mi expertis en el futuro.</p>
-									<p>Durante mis años de experiencia he logrado ser gestor de varios proyectos tecnológicos, manteniendo mis estudios actualizados cada 05 años, aprendiendo sobre la gestión de proyectos bajo PMBOK y metodologías ágiles como SCRUM.</p>
-									<p>Tengo un propósito que vengo trabajando hace 05 años y es sumar con mi conocimiento a la cultura de la educación y la tecnología en la sociedad. Por eso tome la decisión hace 03 años de fundar mi empresa Mec in Home, donde desarrollamos una startup e-learning de proyectos tecnológicos que hoy en día tiene más de 100 proyectos y con usuarios a nivel nacional e internacional.</p>								
-									<p>Mi objetivo es sumar todos mis conocimientos y experiencias adquiridas durante todos estos años para apoyarte en lo que requieras para tu empresa, desde la gestión de proyectos, gestión organizacional, gestión comercial, marketing digital, hasta la misma educación virtual que esta transcendiendo el mundo.</p>							
-									<p>Te daré una perspectiva más versátil a tus principales problemáticas, permitiendo ser una solución atractiva para ti desde el enfoque de tu negocio y de los servicios. Estoy listo para ayudarte y asegurarte que daré el 100% de mi esfuerzo gracias al propósito que nos impulsa a seguir trabajando en busca del bienestar de la sociedad. </p>
+									<p>Estudiante de Arquitectura de Interiores cursando el 7mo ciclo,  con un excelente manejo de herramientas de diseño especialmente en AutoCAD, Sketchup y Vray. Soy una persona responsable, dedicada y con un amor por el diseño lo cual me impulsa a mejorar cada dia </p>
+									<p>Otras habilidades: Adobe nivel usurio, Office nivel usuario, Ingles nivel avanzando</p>
 								</div>
 							</section>	
 
