--- a/Semana 01.html
+++ b/Semana 01.html
@@ -75,13 +75,14 @@
 								<section>
 									<a class="image">
 										<img src="images/semana01presencial.png" alt="" data-position="center center" />
+										<img src="images/S1P.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>Aquí logré presentarme frente a los alumnos brindando todo la información del valor educativo que podía sumarles y también cada alumno logro presentarse iniciando con una pregunta "Rompe Hielos" para luego decir su nombre, carrera, proyectos y hobbies.</p>
+											<p>Lamentablemente tuve un pequeño problema en el trabajo el primer dia (como trabajo en comida rapida hay visitas de salubridad y justo antes de que salga llego y tuve que quedarme a apoyar si queria mi bono de 50 soles)y pues llegue tarde, pero la verdad bastante emocionado por ver que se haria. Al el profesor habia terminado de presentarse y yo quise presentarme primero, lo que al parecer le gusto y me hizo delegado jeje. Luego cada uno fue presentandose y mas que todo fue eso la clase pero muy bien la verdad(adjunto fotito de mi equipo aprobando sin mi porque la visita dura como 2 horas y si no no llegaba a clase jaja).</p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
@@ -92,14 +93,14 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/semana01virtual.png" alt="" data-position="top center" />
+										<img src="images/S1V.JPG" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clase Virtual</h3>
 											</header>
-											<p>En esta sesión virtual empezamos a ver nuestro espacio de trabajo en la computadora para programar, instalando Visual Studio Code y Git. Además, configuramos nuestro Git Hub como también observamos como podemos aprovechar plantillas web para subirlas en Netlify.</p>
+											<p>Esta vez fue la primera vez que veiamos al profesor y parecia bastante estricto pero a la vez muy conocedor del tema, por otro lado hablo de todo lo que trataria el curso, las cosas que abarcariamos que en resumen seria programacion en codigo html y un poco de css. Nos enseño a crearnos nuestra cuenta en github, para luego enseñarnos a crear nuestro primera linea de codigo que es el famoso "hola mundo!" para por ultimo mostrarnos un poco del funcionamiento de visual studio code :D</p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
