--- a/Semana 01.html
+++ b/Semana 01.html
@@ -52,7 +52,7 @@
 							</header>
 							<div class="content">
 								<p>Aquí te voy a contar todo de la semana 01 sobre<br />
-								La presentación de todos y el inicio de Workspeace de programación.</p>
+								Donde todos nos conocimos y mi primer contacto con la programacion.</p>
 							</div>
 						</div>
 					</section>
