--- a/Semana 02.html
+++ b/Semana 02.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Bitácora Digital - Semana 02</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Bitácora Digital - Semana 02</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -52,7 +52,7 @@
 							</header>
 							<div class="content">
 								<p>Aquí te voy a contar todo de la semana 02 sobre<br />
-								Innovación en soluciones TECH y como subir tu sitio web.</p>
+								Programando por primera vez y aprendiendo sobre las ODS</p>
 							</div>
 						</div>
 					</section>
@@ -66,7 +66,7 @@
 									<header class="major">
 										<h2>Introducción</h2>
 									</header>
-									<p>Aquí empezamos en las clases presenciales a realizar dinámicas para poder realizar propuestas de solución innovadoras que afronten ODS y de manera virtual empezamos a aprender a cómo desarrollar nuestra bitácora Digital.</p>
+									<p>En esta clase presencial que si llegue temprano </p>
 								</div>
 							</section>
 
