--- a/sobremi.html
+++ b/sobremi.html
@@ -49,7 +49,7 @@
 									<header class="major">
 										<h1>Sobre mi</h1>
 									</header>
-									<span class="image main"><img src="images/Sobremiportada.jpeg" alt="" /></span>
+									<span class="image main"><img src="images/SOBRE MI FOTO.jpg" alt="" /></span>
 									<p>Estudiante de Arquitectura de Interiores cursando el 7mo ciclo,  con un excelente manejo de herramientas de diseño especialmente en AutoCAD, Sketchup y Vray. Soy una persona responsable, dedicada y con un amor por el diseño lo cual me impulsa a mejorar cada dia </p>
 									<p>Otras habilidades: Adobe nivel usurio, Office nivel usuario, Ingles nivel avanzando</p>
 								</div>
