--- a/Semana 02.html
+++ b/Semana 02.html
@@ -64,9 +64,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Introducción</h2>
+										<h2>Empezando a programar</h2>
 									</header>
-									<p>En esta clase presencial que si llegue temprano </p>
+									<p>Esta semana el profesor nos mostrara por primera vez como modificar codigos de programacion y tambien tocamos temas sobre ODS para prepararnos para lo que se viene </p>
 								</div>
 							</section>
 
