--- a/Semana 02.html
+++ b/Semana 02.html
@@ -66,7 +66,7 @@
 									<header class="major">
 										<h2>Empezando a programar</h2>
 									</header>
-									<p>Esta semana el profesor nos mostrara por primera vez como modificar codigos de programacion y tambien tocamos temas sobre ODS para prepararnos para lo que se viene </p>
+									<p>Esta semana el profesor nos mostrara por primera vez como modificar codigos de programacion y tambien tocamos temas sobre ODS para prepararnos para lo que se </p>
 								</div>
 							</section>
 
