semana 2 texto e imagenes

--- a/Semana 02.html
+++ b/Semana 02.html
@@ -74,14 +74,15 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="images/semana02presencial.png" alt="" data-position="center center" />
+										<img src="images/S2P.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>En esta clase se logró explicar sobre las ODS para saber los problemas que se afrontaban en cada una de ellas y sirva de idea para que los alumnos puedan buscar soluciones existentes en el mundo que los afronten.</p>
+											<p>En esta clase presencial, al haber tenido un feriado el dia jueves, el profesor avanzo bastante rapido explicando de una manera bastante buena y entendible todo lo que debio tocarse el dia jueves. Empezamos aprendiendo un poco sobre lo que eran las ODS, aunque ya tengo conocimiento de lo que son las ODS, nunca esta de mas reforzarlo. Aunque el profesor no solo hizo eso si no que nos encargo una actividad en la cual teniamos que pensar sobre proyectos que puedan responder a una ODS. En esta actividad mi grupo y yo pensamos sobre una bicicleta electrica que pueda recargarse mediante distintos tipos de energia natural, energias como la solar, mecanica, eolica, mediante el frenado, entre otras muchas mas. </p>
+											<p>En esta actividad los otros grupos tambien presentaron lo que vendria a ser sus ideas de proyectos que responden a diferentes ODS, pero luego el profesor deicidio que la ganadora era la nuestra, la bicicleta electrica y nos dio un punto en la primera actividad en la cual tuvimos 20 gracias a ese punto.  </p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
@@ -92,14 +93,15 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/semana02virtual.png" alt="" data-position="top center" />
+										<img src="images/S2V.JPG" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Clase Virtual</h3>
+												<h3>Clase Presencial "parte 2"</h3>
 											</header>
-											<p>De manera virtual logramos ver el detalle de todo lo que debe contener nuestra bitacora digital y cómo elegir la mas adecuada para nosotros. Descargamos diversas plantillas y vimos visualizando todas las oportunidades de código que nos permite.</p>
+											<p>En este punto debido al feriado que hubo voy a abarcar sobre el siguiente punto que tocamos en la clase presencial de esta semana ya que creo que es lo que debio corresponder a la clase del jueves 28. Una vez terminamos la actividad el profesor empezo a darnos la teoria sobre lo que es HTML, CSS, JAVA, JAVA SCRIPT, PYTHON entre otras cosas mas relacionadas con el mundo de programacion, esta parte fue mas que todo teoria, pero aun asi fue bastante interesante. Lo que me emociono mas fue cuando aplicamos esa teoria para empezar a modificar la bitacora digital que el profesor nos habia hablado la semana 1. </p>
+											<p>El profesor tenia una plantilla que el habia creado en la cual nos enseño como modificar todo en Visual Studio Code. Nos empezo a mostrar como en la paginas web al darle inspeccionar podriamos encontrar con mas facilidad donde estaba esa linea de codigo para poder modificarla mas facilmente, a cambiar tambien las letras e imagenes a nuestro gusto para poder personalizar la bitacora y finalmente nos permitio usar la computadora para poder modficar en vivo y en directo la bitacora del profesor para demostrar que habiamos entendido lo que el profesor habia estado explicando toda la clase.(Adjunto imagen sobre lo explicado en clase por el profesor)   </p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
