--- a/Semana 03.html
+++ b/Semana 03.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Bitácora Digital - Semana 03</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Bitácora Digital - Semana 03</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -52,7 +52,7 @@
 							</header>
 							<div class="content">
 								<p>Aquí te voy a contar todo de la semana 03 sobre<br />
-								Soluciones innovadoras a problemáticas ODS y programación en HTML.</p>
+								Proponiendo proyectos de ODS y configurando Visual y github</p>
 							</div>
 						</div>
 					</section>
@@ -64,9 +64,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Introducción</h2>
+										<h2>Programando nuestra bitacora digital</h2>
 									</header>
-									<p>En esta semana logramos ver propuestas que ya existen en nuestro país que son proyectos tecnológicos de gran impacto que resuelven problemáticas de la ODS y también logramos empeazar a aprender programación HTML.</p>
+									<p>Esta semana seguimos viendo soluciones innovadoras para diferentes ODS y sincronizamos Visual con github para empezar a programar desde nuestra PC </p>
 								</div>
 							</section>
 
@@ -99,7 +99,8 @@
 											<header class="major">
 												<h3>Clase Virtual</h3>
 											</header>
-											<p>En esta clase se empezó a aprender a programar en HTML apoyados de la plantilla, viendo como verificar mediante el método de la curiosidad a lograr ver cada cambio afrontado mediante el código y la visualización de su representación en la web.</p>
+											<p>Empezamos la clase instalando lo que al parecer seria una extension para el Visual Studio Code que nos ayudaria a sincronizar nuestro Github con este mismo, se llama Git Bash. Una vez instalado el profesor nos explico que con ayuda del Visual Studio podriamos modificar el Github sin necesidad de estar conectados a la red unicamente copiando el link de nuestro github en el Visual Studio, y tal cual lo dijo el profesor se hizo realidad. Empezamos a ver todos los codigos de github en el Visual studio y el profesor empezo poco a poco a explicarnos como se tenian que hacer las cosas para empezar a modificar la bitacora y esta vez ya desde Visual y tambien desde nuestra propia PC</p>
+											<p>Luego teniamos que pasar a la parte en la cual teniamos que pasar todos los cambios que habiamos hecho en el Visual Studio Code al Github ya que todo lo que estabamos haciendo era unicamente visto por nosotros cuando presianabamos F5 o utilizabamos la opcion de Run. Utilizando el terminal y poniendo los codigos que el profesor nos proporciono en la clase logre sincronizar el Visual con el Github y con cada cambio que hacia me sale una notificacion en la barra de herramientas izquierda en la cual solo tengo que colocar un nombre al cambio y luego sincronizarlo. Al inicio cuesta acostumbrarte un poco y puedes llegar a creer que las cosas no estan bien configuradas pero como si fuera magia al entrar al link del Github todas las modificaciones que se han hecho luego de esperar a que carguen se suben a la nube. </p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
