--- a/Semana 03.html
+++ b/Semana 03.html
@@ -74,7 +74,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="images/semana03presencial.png" alt="" data-position="center center" />
+										<img src="images/S3P.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -92,7 +92,7 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/semana03virtual.png" alt="" data-position="top center" />
+										<img src="images/S3V.JPG" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
