--- a/Semana 03.html
+++ b/Semana 03.html
@@ -93,6 +93,7 @@
 								<section>
 									<a class="image">
 										<img src="images/S3V.JPG" alt="" data-position="top center" />
+										<img src="images/S3V1.JPG" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
