--- a/Semana 04.html
+++ b/Semana 04.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt">
-					<a href="index.html" class="logo"><strong>Oscar Castillo</strong> <span>Bitácora Digital - Semana 04</span></a>
+					<a href="index.html" class="logo"><strong>Sergio Pino</strong> <span>Bitácora Digital - Semana 04</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -51,8 +51,8 @@
 								<h1>Semana 04</h1>
 							</header>
 							<div class="content">
-								<p>Aquí te voy a contar todo de la semana 04 sobre<br />
-								Proyectos Arduino y programación en CSS.</p>
+								<p>Hablemos un poco sobre la semana 4, que incluye CSS<br />
+								y proyectos con arduino .</p>
 							</div>
 						</div>
 					</section>
@@ -64,9 +64,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Introducción</h2>
+										<h2>Preparandonos para el proyecto final y aprendiendo CSS </h2>
 									</header>
-									<p>En esta semana logramos ver muchos proyectos de Arduino de manera que sirva a los alumnos a una dinámica de qué equipo ofrece más ideas de Arduino y también se les empezó a enseñar sobre la programación en CSS.</p>
+									<p>Esta semana el profesor empezo a explicarnos mas sobre lo que es CSS y de esta forma poder modificar algunas cosas en nuestra bitacora asi como una dinamica en clase sobre proyectos con arduino.</p>
 								</div>
 							</section>
 
@@ -74,14 +74,17 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="images/semana04presencial.png" alt="" data-position="center center" />
+										<img src="images/S4P.jpg" alt="" data-position="center center" />
+										<img src="images/S4P2.JPG" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>En esta clase logramos observar diversas ideas de proyectos de Arduino y realizamos una dinámica para saber a qué equipo se le podían ocurrir mas ideas sobre Arduino que sean potenciales soluciones y que también les sume para su trabajo de la actividad numero 03.</p>
+											<p>En esta clase el profesor empezo a mostrarnos en vivo sobre el tema de CSS y como funcionaba nos comentaba que no podia ahondar mucho en este tema, no porque no quisiera, si no mas bien por temas de tiempo y al empezar la explicacion y modificaciones la verdad si note el porque lo decia CSS es mucho mas extenso que programar con HTML, ya que como el mismo nos lo mostro en el Visual Studio podiamos apreciar en el lado derecho una interminable lista de codigos al momento de entrar a CSS, dandonos a entender que es bastante extenso pero que a su vez se puede modificar muchas cosas como los colores, tamaños, fuentes entre otras cosas. </p>
+											<p>Pero ya que mencionamos lo de las fuentes el profesor tambien nos enseño a descargar fuentes desde Google Fonts explicandonos que era un lugar gratuito con muchas fuentes optimizadas especificamente para google, es decir que funcionaria mucho mejor desde el navegador de google. Luego de esto el profesor empezo a reemplazar en el Visual Studio las fuentes que ya tenia en la plantilla que habia creado por las nuevas fuentes que habia descargado desde google fonts y que efectivamente se reemplazaba en la misma bitacora</p>
+											<p>Luego el profesor dio un break para poder almorzar y luego del mismo el profesor dejo una actividad en la cual teniamos que pensar sobre una problematica la cual teniamos que irla resolviendo mediante lo que el profesor momentos previos nos habia explicado que es el Desing Thinking, luego de realizar la actividad, que por cosas de la vida pero la verdad merecido creo yo "jeje" mi grupo gano la actividad proponiendo como problema principal "problemas para tomar pastillas con los adultos mayores" pues nos empezamos a ver de una forma mas clara de como se tenia que empezar a trabajar este tipo de proyectos para poder llegar con una solucion efectiva.  </p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
@@ -92,14 +95,19 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/semana04virtual.png" alt="" data-position="top center" />
+										<img src="images/S4V.JPG" alt="" data-position="top center" />
+										<img src="images/S4V1.JPG" alt="" data-position="top center" />
+										<img src="images/S4V2.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clase Virtual</h3>
 											</header>
-											<p>En esta clase logramos sumergirnos en el aprendizaje de programación CSS de la misma manera por medio de la curiosidad observando el terminal y viendo como las codificaciones interactuaban en nuestra plantilla y trabajaban asociadas a nuestro código HTML.</p>
+											<p>En esta clase virtual yo tuve una urgencia de ultimo minuto y no pude asistir a la clase en vivo y en directo. Pero gracias a que las clases se graban en el moodle pude verla luego aunque no se si solo sea un error mio pero se escucho entrecortada la clase. En esta clase que fue algo corta con respecto a enseñansa el profesor nos enseña a como apoyarnos de lo que seria Chat GPT para poder programar en HTML y CSS, utilizando un promp el cual es "Hola ChatGPT, necesito que seas un desarrollador web y docente para que me ayudes a dar mis primeros pasos en programación web con HTML y CSS. Puedo iniciar a consultarte?". </p>
+											<p>De esta forma logramos que Chat GPT por decirlo de alguna manera se vuelva nuestro profesor ya que nos empieza a enseñar paso a paso como empezar con HTML y CSS logrando algo bastante similar a lo que hicimos en las primeras semanas que era el famoso "Hola mundo" que hicimos en github en la Semana 1 pero con la diferencia que esta vez todo nos lo estaba enseñando una inteligencia artificial, de manera gratuita y con el plus que nos permitia ver poco a poco lo que ibamos modificando como el tamaño del texto, un color de fondo entre otras cosas mas. </p>
+											<p>Tambien el profesor nos hizo un reforzamiento sobre como funcionaba las paginas web de hoy en dia con los lenguajes 3 lenguajes de programacion que son HTML que se encarga de la estructura y el contenido que tendra la pagina web, CSS para el diseño y JavaScript para darle vida a la pagina web con interacciones dinamicas. Tambien nos enseño a usar Netlify que es una pagina que nos ayuda a alojar la futura pagina web que haremos, de manera muy sencilla solo creando una cuenta y subiendo los archivos para luego obtener el link de nuestra pagina web. </p>
+											<p>Para finalizar el profesor mando a salas para poder ir avanzando la bitacora y tambien poder ir criticando y resolviendo dudas de todas las personas que tuvieran alguna</p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
