--- a/Semana 03.html
+++ b/Semana 03.html
@@ -81,7 +81,8 @@
 											<header class="major">
 												<h3>Clase Presencial</h3>
 											</header>
-											<p>En esta clase logramos visualizar y analizar las soluciones peruanas medioambientales y educativas para poder tener más ideas de propuestas de solución que los alumnos debieron idear en equipo.</p>
+											<p>Comenzaba la clase y el profesor empezo a enseñarnos sobre el "href" que es algo que nos facilita mucho a hacer referencia a otra pagina, link, imagen, video lo que sea en realidad. Es decir que si nosotros colocamos "href=nombre de la carpeta/nombre de la imagen.png" o directamente el nombre de la imagen dependiendo el como lo tengamos guardado podemos agregarla a nuestra bitacora pero no solo eso si tambien colocamos "href" seguido de un link o de algun .html de nuestra bitacora dando un solo click podemos dirigirnos a ese lugar. El mayor ejemplo es el menu que tenemos en nuestra plantilla que esta llenos de "href". </p>
+											<p>Tambien como todas las semanas el profesor le da bastante importancia a lo que es idear proyectos que solucionen alguna ODS, y esta no fue la excepcion. El profesor nos dejo como actividad pensar la mayor cantidad de ideas sobre proyectos tecnologicos y no tecnologicos que podemos en el menor tiempo posible para que el luego pase a criticarlos grupo por grupo. Lamentablemente esta actividad no la pudimos ganar ya que habian algunas ideas que habiamos planteado que no estaban del todo claras pero de igual forma, alguna de las que hicimos en lo personal me gustaron mucho como por ejemplo le pusimos "Tinder de mascotas" la verdad suena muy raro pero consiste en una aplicacion tipo "Tinder" en la cual albergues, perreras, veterinarias entre otras suban fotos de las mascotas que tienen para que asi los usuarios den "match" y puedan adoptar a alguno de estos animalitos.</p>
 											<!--
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
